<resources>
    <string name="app_name">QueDlç Restaurante</string>
    <string name="dish_image_content_description">Dish image</string>
    <string name="dishes_activity_loading_dishes">Carregando os pratos…</string>
    <string name="button_payment">Pagamento</string>
    <string name="button_edit_dish">Alterar prato</string>

    <string name="dish">Prato: </string>
    <string name="description">Descrição: </string>
    <string name="side_dishes">Acompanh.: </string>
    <string name="mixture">Mistura: </string>
    <string name="drink">Bebida:</string>
    <string name="button_drinks">Bebida</string>
    <string name="no_drink_selected">Nada selecionado</string>
    <string name="activity_drink_select_button">Selecionar</string>
    <string name="drink_error">Erro ao escolher a bebida</string>
    <string name="drink_activity_loading_drinks">Carregando bebidas…</string>
    <string name="drink_not_selected">Nenhuma bebida selecionada</string>
    <string name="edit_dish_activity_loading_dishes">Carregando todos os pratos …</string>
    <string name="activity_edit_dish_save">Salvar</string>
    <string name="activity_history_final_price">TOTAL: R$</string>
    <string name="activity_payment_final_price">Valor TOTAL: R$</string>
    <string name="activity_payment_order">Fazer pedido</string>
    <string name="size">Tamanho:</string>
    <string name="activity_payment_default_price">0,00</string>
    <string name="activity_payment_dish_price">Valor Prato: R$</string>
    <string name="activity_payment_drink_price">Valor Bebida: R$</string>
    <string name="menu_history_button">Histórico</string>
    <string name="payment_method">Pagamento: </string>
    <string name="payment_success">Pedido feito com sucesso!!</string>
    <string name="payment_failed">Erro no pedido, por favor tente mais tarde!</string>
    <string name="dish_size_small">Pequeno</string>
    <string name="dish_size_medium">Médio</string>
    <string name="dish_size_large">Grande</string>
    <string name="dish_size_extra_large">Extra grande</string>
    <string name="empty_list">Vazio</string>
    <string name="data_load_error">Erro ao carregar dados! Tente novamente mais tarde…</string>
    <string name="history_activity_loading_history">Carregando histórico…</string>
    <string name="payment_activity_paying">Processando pedido…</string>
    <string name="no_account_selected">Nenhuma conta selecionada. Fechando aplicativo…</string>
    <string name="activity_payment_payment_method">Pagamento:</string>
    <string name="activity_dish_detail_image_description">Dish Image</string>
    <string name="activity_entry_point_save_user_error">Erro ao salvar usuário. Fechando aplicação.</string>
    <string name="activity_entry_point_load_user_error">Erro ao carregar usuário. Fechando aplicação.</string>

    <string-array name="payment_methods">
        <item>Cartão de crédito</item>
        <item>Cartão de dédito</item>
        <item>Sodexo Refeição</item>
        <item>Alelo Refeição</item>
        <item>Dinheiro</item>
    </string-array>
</resources>
